--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -65,13 +65,16 @@ const isAuthenticated = !!Astro.cookies.get("pb_auth")?.value;
         <a href="/panier" class="hover:text-primary transition-colors">
           <img src={cart.src} alt="Panier" class="h-6 md:h-7 lg:h-6 w-auto" />
         </a>
-        <a href="#" class="hover:text-primary transition-colors">
+        <button
+          onclick="window.openSaveModal?.()"
+          class="hover:text-primary transition-colors cursor-pointer"
+        >
           <img
             src={save.src}
             alt="Sauvegarder"
             class="h-6 md:h-7 lg:h-6 w-auto"
           />
-        </a>
+        </button>
         {
           isAuthenticated ? (
             <button
